diesel-builders/tests/ui_nightly/duplicate_discretionary_error.stderr
error: Duplicate `#[discretionary]` attribute found. Each field can only have one `#[discretionary]` attribute.
  --> tests/ui_nightly/duplicate_discretionary_error.rs:8:5
   |
 8 | /     #[discretionary]
 9 | |     #[discretionary]
10 | |     field1: i32,
   | |_______________^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_table`
 --> tests/ui_nightly/duplicate_discretionary_error.rs:5:23
  |
5 | #[diesel(table_name = test_table)]
  |                       ^^^^^^^^^^ use of unresolved module or unlinked crate `test_table`
  |
  = help: if you wanted to use a crate named `test_table`, use `cargo add test_table` to add it to your `Cargo.toml`
